--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 De Rome-app website's
-
-<a href="ArjenWassenaar.github.io/ApolloBelvedere.html">Apollo Belvedere</a>
-<a href="ArjenWassenaar.github.io/ViaGiulia.html">Via Giulia</a>
+<br>
+<p></p><a href="ArjenWassenaar.github.io/ApolloBelvedere.html">Apollo Belvedere</a></p>
+<p></p><a href="ArjenWassenaar.github.io/ViaGiulia.html">Via Giulia</a></p>
 
