--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 De Rome-app website's
 <br>
-<p></p><a href="ArjenWassenaar.github.io/ApolloBelvedere.html">Apollo Belvedere</a></p>
-<p></p><a href="ArjenWassenaar.github.io/ViaGiulia.html">Via Giulia</a></p>
+<p><a href="ArjenWassenaar.github.io/ApolloBelvedere.html">Apollo Belvedere</a></p>
+<p><a href="ArjenWassenaar.github.io/ViaGiulia.html">Via Giulia</a></p>
+<p><a href="ArjenWassenaar.github.io/notesnl.html">NotesNL</a></p>
 
